sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:9: error: '(' expected but identifier found.
    if colorAB == "RED"{
       ^DutchFlagAlgo:13: error: '(' expected but identifier found.
    if colorAB == "WHITE"{
       ^DutchFlagAlgo:17: error: '(' expected but identifier found.
    if colorAB == "BLUE"{
       ^DutchFlagAlgo:21: error: illegal start of simple expression
  }
  ^